fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-  /* font-family: 'Inter', sans-serif; */
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: 'Inter', sans-serif;
+  /* font-family: 'Lexend Deca', sans-serif; */
   background-color: hsl(233, 47%, 7%);
   color: hsl(0, 0%, 100%);
   min-height: 100vh;
@@ -55,6 +55,8 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: hsla(0, 0%, 100%, 0.6);
+  transform: translateY(-30px);
+  /* margin-top: -30px; */
 }
 
 .stat-boxes {
@@ -97,7 +99,7 @@ body {
 }
 /* ****************************** */
 /* Media Query */
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .container {
     max-width: 385px;
     padding: 0 10px;
@@ -122,6 +124,10 @@ body {
 
   .h1 {
     font-size: 30px;
+  }
+
+  .stats-preview-paragraph {
+    transform: translateY(0);
   }
 
   .stat-boxes {
